--- a/webfejlesztes_django_projekt/website/templates/houses.html
+++ b/webfejlesztes_django_projekt/website/templates/houses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main Page</title>
+    <title>Houses Page</title>
 </head>
 <body>
     <h1><a href="{% url 'persons' %}">Person</a> <a href="{% url 'houses' %}">House</a></h1>
