--- a/webfejlesztes_django_projekt/website/templates/houses.html
+++ b/webfejlesztes_django_projekt/website/templates/houses.html
@@ -2,31 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>Houses Page</title>
 </head>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navigation</a>
+    <a class="navbar-brand" href="{% url 'persons' %}">Person</a>
+    <a class="navbar-brand" href="{% url 'houses' %}">House</a>
+</nav>
 <body>
-    <h1>Navigation</h1>
-    <h2><a href="{% url 'persons' %}">Person</a> <a href="{% url 'houses' %}">House</a></h2>
+<div class="container">
+    <div class="container" id="mode">
+    <h1>House Table</h1>
+    <h2>Mode</h2>
     <form method="get">
-        <h2><button type="submit" name="mode" value="add">Add</button><button type="submit" name="mode" value="edit">Edit</button></h2>
+        <button type="submit" name="mode" value="add" class="btn btn-default">Add</button>
+        <button type="submit" name="mode" value="edit" class="btn btn-default">Edit</button>
     </form>
+        </div>
+    <div class="container" id="form-container">
     {% if mode == 'add' %}
     <form method="post">
         {% csrf_token %}
-        <input type="text" name="address" placeholder="address">
-        <input type="text" name="houseType" placeholder="house type">
+        <div class="form-group">
+        <label for="address">Address</label>
+        <input id="address" type="text" name="address" placeholder="address"  class="form-control">
+        </div>
+        <div class="form-group">
+        <label for="houseType">House Type</label>
+        <input id="houseType" type="text" name="houseType" placeholder="house type"  class="form-control">
+        </div>
         <button type="submit" name="createHouse">Create House</button>
     </form>
     {% elif mode == 'edit' %}
     <form method="post">
         {% csrf_token %}
-        <input type="text" name="id" placeholder="id">
-        <input type="text" name="address" placeholder="address">
-        <input type="text" name="houseType" placeholder="house type">
-        <button type="submit" name="editHouse">Edit House</button>
+        <div class="form-group">
+        <label for="eID">ID</label>
+        <input id="eID" type="text" name="id" placeholder="id"  class="form-control">
+        </div>
+        <div class="form-group">
+        <label for="eAddress">Address</label>
+        <input id="eAddress" type="text" name="address" placeholder="address"  class="form-control">
+        </div>
+        <div class="form-group">
+        <label for="eHouseType">House Type</label>
+        <input id="eHouseType" type="text" name="houseType" placeholder="house type"  class="form-control">
+        </div>
+        <button type="submit" name="editHouse" class="btn btn-default">Edit House</button>
     </form>
     {% endif %}
-    <table>
+    </div>
+    <div class="container">
+    <div class="table-responsive">
+        <table class="table table-striped">
         <thead>
             <tr>
                 <th>ID</th>
@@ -35,7 +69,7 @@
                 <th>Delete</th>
             </tr>
         </thead>
-        <tbody>
+            <tbody>
         {% for item in data %}
             <tr>
                 <td>{{ item.id }}</td>
@@ -45,12 +79,15 @@
                     <form method="post">
                         {% csrf_token %}
                         <input type="hidden" value="{{ item.id }}" name="id">
-                        <button type="submit" name="deleteHouse">Delete</button>
+                        <button type="submit" name="deleteHouse" class="btn btn-default">Delete</button>
                     </form>
                 </td>
             </tr>
         {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
+    </div>
+</div>
 </body>
 </html>
