--- a/webfejlesztes_django_projekt/website/templates/persons.html
+++ b/webfejlesztes_django_projekt/website/templates/persons.html
@@ -2,36 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>Persons Page</title>
 </head>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navigation</a>
+    <a class="navbar-brand" href="{% url 'persons' %}">Person</a>
+    <a class="navbar-brand" href="{% url 'houses' %}">House</a>
+</nav>
 <body>
-    <h1>Navigation</h1>
-    <h2><a href="{% url 'persons' %}">Person</a> <a href="{% url 'houses' %}">House</a></h2>
+<div class="container">
+    <div class="container" id="mode">
+    <h1>Person Table</h1>
+    <h2>Mode</h2>
     <form method="get">
-        <h2><button type="submit" name="mode" value="add">Add</button><button type="submit" name="mode" value="edit">Edit</button></h2>
+        <button type="submit" name="mode" value="add" class="btn btn-default">Add</button>
+        <button type="submit" name="mode" value="edit" class="btn btn-default">Edit</button>
     </form>
+        </div>
+    <div class="container" id="form-container">
     {% if mode == 'add' %}
     <form method="post">
         {% csrf_token %}
-        <input type="text" name="house" placeholder="houseID">
-        <input type="text" name="name" placeholder="name">
-        <input type="text" name="gender" placeholder="gender">
-        <input type="date" name="birth">
-        <button type="submit" name="createPerson">Create Person</button>
+        <div class="form-group">
+            <label for="house">HouseID</label>
+            <input id="house" type="text" name="house" placeholder="houseID" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" type="text" name="name" placeholder="name" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="gender">Gender</label>
+            <input id="gender" type="text" name="gender" placeholder="gender" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="birth">Birth</label>
+            <input id="birth" type="date" name="birth" class="form-control">
+        </div>
+        <button type="submit" name="createPerson" class="btn btn-default">Create Person</button>
     </form>
     {% elif mode == 'edit' %}
     <form method="post">
         {% csrf_token %}
-        <input type="text" name="id" placeholder="id">
-        <input type="text" name="house" placeholder="houseID">
-        <input type="text" name="name" placeholder="name">
-        <input type="text" name="gender" placeholder="gender">
-        <input type="date" name="birth">
-        <button type="submit" name="editPerson">Edit Person</button>
+        <div class="form-group">
+            <label for="eID">PersonID</label>
+            <input id="eID" type="text" name="id" placeholder="id" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="eHouse">HouseID</label>
+            <input id="eHouse" type="text" name="house" placeholder="houseID" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="eName">Name</label>
+            <input id="eName" type="text" name="name" placeholder="name" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="eGender">Gender</label>
+            <input id="eGender" type="text" name="gender" placeholder="gender" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="eDate">Date</label>
+            <input id="eDate" type="date" name="birth" class="form-control">
+        </div>
+        <button type="submit" name="editPerson" class="btn btn-default">Edit Person</button>
     </form>
     {% endif %}
-    <table>
-        <thead>
+    </div>
+    <div class="container">
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
             <tr>
                 <th>ID</th>
                 <th>HouseID</th>
@@ -39,9 +85,9 @@
                 <th>Gender</th>
                 <th>Birth</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for item in data %}
+            </thead>
+            <tbody>
+            {% for item in data %}
             <tr>
                 <td>{{ item.id }}</td>
                 <td>{{ item.house.id }}</td>
@@ -52,12 +98,15 @@
                     <form method="post">
                         {% csrf_token %}
                         <input type="hidden" value="{{ item.id }}" name="id">
-                        <button type="submit" name="deletePerson">Delete</button>
+                        <button type="submit" name="deletePerson" class="btn btn-default">Delete</button>
                     </form>
                 </td>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    </div>
+</div>
 </body>
 </html>
