--- a/webfejlesztes_django_projekt/website/templates/houses.html
+++ b/webfejlesztes_django_projekt/website/templates/houses.html
@@ -11,9 +11,10 @@
     <title>Houses Page</title>
 </head>
 <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navigation</a>
+    <a class="navbar-brand" href="">Navigation</a>
     <a class="navbar-brand" href="{% url 'persons' %}">Person</a>
     <a class="navbar-brand" href="{% url 'houses' %}">House</a>
+    <a class="navbar-brand" href="{% url 'logout' %}" id="logout">Logout</a>
 </nav>
 <body>
 <div class="container">
@@ -21,8 +22,8 @@
     <h1>House Table</h1>
     <h2>Mode</h2>
     <form method="get">
-        <button type="submit" name="mode" value="add" class="btn btn-default">Add</button>
-        <button type="submit" name="mode" value="edit" class="btn btn-default">Edit</button>
+        <button type="submit" name="mode" value="add" class="btn btn-primary">Add</button>
+        <button type="submit" name="mode" value="edit" class="btn btn-primary">Edit</button>
     </form>
         </div>
     <div class="container" id="form-container">
@@ -31,34 +32,34 @@
         {% csrf_token %}
         <div class="form-group">
         <label for="address">Address</label>
-        <input id="address" type="text" name="address" placeholder="address"  class="form-control">
+        <input id="address" type="text" name="address" placeholder="Address"  class="form-control">
         </div>
         <div class="form-group">
         <label for="houseType">House Type</label>
-        <input id="houseType" type="text" name="houseType" placeholder="house type"  class="form-control">
+        <input id="houseType" type="text" name="houseType" placeholder="House type"  class="form-control">
         </div>
-        <button type="submit" name="createHouse">Create House</button>
+        <button type="submit" name="createHouse" class="btn btn-primary">Create House</button>
     </form>
     {% elif mode == 'edit' %}
     <form method="post">
         {% csrf_token %}
         <div class="form-group">
         <label for="eID">ID</label>
-        <input id="eID" type="text" name="id" placeholder="id"  class="form-control">
+        <input id="eID" type="text" name="id" placeholder="ID"  class="form-control">
         </div>
         <div class="form-group">
         <label for="eAddress">Address</label>
-        <input id="eAddress" type="text" name="address" placeholder="address"  class="form-control">
+        <input id="eAddress" type="text" name="address" placeholder="Address"  class="form-control">
         </div>
         <div class="form-group">
         <label for="eHouseType">House Type</label>
-        <input id="eHouseType" type="text" name="houseType" placeholder="house type"  class="form-control">
+        <input id="eHouseType" type="text" name="houseType" placeholder="House type"  class="form-control">
         </div>
-        <button type="submit" name="editHouse" class="btn btn-default">Edit House</button>
+        <button type="submit" name="editHouse" class="btn btn-primary">Edit House</button>
     </form>
     {% endif %}
     </div>
-    <div class="container">
+    <div class="container"  id="table_div">
     <div class="table-responsive">
         <table class="table table-striped">
         <thead>
