--- a/webfejlesztes_django_projekt/website/templates/persons.html
+++ b/webfejlesztes_django_projekt/website/templates/persons.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>Persons Page</title>
 </head>
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navigation</a>
+<nav class="navbar navbar-light bg-light ml-auto">
+    <a class="navbar-brand" href="">Navigation</a>
     <a class="navbar-brand" href="{% url 'persons' %}">Person</a>
     <a class="navbar-brand" href="{% url 'houses' %}">House</a>
+    <a class="navbar-brand" href="{% url 'logout' %}" id="logout">Logout</a>
 </nav>
 <body>
 <div class="container">
@@ -21,8 +22,8 @@
     <h1>Person Table</h1>
     <h2>Mode</h2>
     <form method="get">
-        <button type="submit" name="mode" value="add" class="btn btn-default">Add</button>
-        <button type="submit" name="mode" value="edit" class="btn btn-default">Edit</button>
+        <button type="submit" name="mode" value="add" class="btn btn-primary">Add</button>
+        <button type="submit" name="mode" value="edit" class="btn btn-primary">Edit</button>
     </form>
         </div>
     <div class="container" id="form-container">
@@ -31,50 +32,50 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="house">HouseID</label>
-            <input id="house" type="text" name="house" placeholder="houseID" class="form-control">
+            <input id="house" type="text" name="house" placeholder="HouseID" class="form-control">
         </div>
         <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" type="text" name="name" placeholder="name" class="form-control">
+            <input id="name" type="text" name="name" placeholder="Name" class="form-control">
         </div>
         <div class="form-group">
             <label for="gender">Gender</label>
-            <input id="gender" type="text" name="gender" placeholder="gender" class="form-control">
+            <input id="gender" type="text" name="gender" placeholder="Gender" class="form-control">
         </div>
         <div class="form-group">
             <label for="birth">Birth</label>
             <input id="birth" type="date" name="birth" class="form-control">
         </div>
-        <button type="submit" name="createPerson" class="btn btn-default">Create Person</button>
+        <button type="submit" name="createPerson" class="btn btn-primary">Create Person</button>
     </form>
     {% elif mode == 'edit' %}
     <form method="post">
         {% csrf_token %}
         <div class="form-group">
             <label for="eID">PersonID</label>
-            <input id="eID" type="text" name="id" placeholder="id" class="form-control">
+            <input id="eID" type="text" name="id" placeholder="ID" class="form-control">
         </div>
         <div class="form-group">
             <label for="eHouse">HouseID</label>
-            <input id="eHouse" type="text" name="house" placeholder="houseID" class="form-control">
+            <input id="eHouse" type="text" name="house" placeholder="HouseID" class="form-control">
         </div>
         <div class="form-group">
             <label for="eName">Name</label>
-            <input id="eName" type="text" name="name" placeholder="name" class="form-control">
+            <input id="eName" type="text" name="name" placeholder="Name" class="form-control">
         </div>
         <div class="form-group">
             <label for="eGender">Gender</label>
-            <input id="eGender" type="text" name="gender" placeholder="gender" class="form-control">
+            <input id="eGender" type="text" name="gender" placeholder="Gender" class="form-control">
         </div>
         <div class="form-group">
             <label for="eDate">Date</label>
             <input id="eDate" type="date" name="birth" class="form-control">
         </div>
-        <button type="submit" name="editPerson" class="btn btn-default">Edit Person</button>
+        <button type="submit" name="editPerson" class="btn btn-primary">Edit Person</button>
     </form>
     {% endif %}
     </div>
-    <div class="container">
+    <div class="container" id="table_div">
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
