--- a/webfejlesztes_django_projekt/website/templates/register.html
+++ b/webfejlesztes_django_projekt/website/templates/register.html
@@ -34,6 +34,13 @@
         </div>
         <button type="submit" name="register"  class="btn btn-primary">Create account</button>
     </form>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 </div>
 </body>
 </html>
