--- a/webfejlesztes_django_projekt/website/templates/houses.html
+++ b/webfejlesztes_django_projekt/website/templates/houses.html
@@ -25,6 +25,13 @@
         <button type="submit" name="mode" value="add" class="btn btn-primary">Add</button>
         <button type="submit" name="mode" value="edit" class="btn btn-primary">Edit</button>
     </form>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
         </div>
     <div class="container" id="form-container">
     {% if mode == 'add' %}
