A persons crud felületén jelenjen meg a cím is.

--- a/webfejlesztes_django_projekt/website/templates/persons.html
+++ b/webfejlesztes_django_projekt/website/templates/persons.html
@@ -89,6 +89,7 @@
             <tr>
                 <th>ID</th>
                 <th>HouseID</th>
+                <th>Address</th>
                 <th>Name</th>
                 <th>Gender</th>
                 <th>Birth</th>
@@ -99,6 +100,7 @@
             <tr>
                 <td>{{ item.id }}</td>
                 <td>{{ item.house.id }}</td>
+                <td>{{ item.house.address }}</td>
                 <td>{{ item.name }}</td>
                 <td>{{ item.gender }}</td>
                 <td>{{ item.birth }}</td>
